--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=mall
 #database
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:tcp://localhost/~/local;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test;AUTO_SERVER=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -13,3 +13,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
+
+#upload
+spring.servlet.multipart.max-request-size=300MB
+spring.servlet.multipart.max-file-size=100MB
+com.example.upload.path=upload
+
+#google
+google.client-id=380406392007-daknmmgomgb7shse917iipcrvb2iqmfk.apps.googleusercontent.com
