--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'net.coobird:thumbnailator:0.4.19'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	
 	// chatting gradle
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
