--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,13 @@ dependencies {
 	// Google API
     implementation 'com.google.api-client:google-api-client:2.2.0'
     implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'
+    
+    // Redis Server
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+    
+    // SDK
+    implementation 'com.solapi:sdk:1.0.3'
 }
 
 tasks.named('test') {
